--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@firebase/app": "^0.4.25",
     "@firebase/firestore": "^1.8.0",
+    "bootstrap": "^4.4.0",
+    "bootstrap-vue": "^2.1.0",
     "firebase": "^7.5.0",
-    "vue": "^2.5.2",
+    "vue": "^2.6.10",
     "vue-firestore": "^0.3.22",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuefire": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
