--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.6.10",
     "vue-firestore": "^0.3.22",
     "vue-router": "^3.0.1",
-    "vuefire": "^2.2.0"
+    "vuefire": "^2.2.0",
+    "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
