--- a/static/manifest.json
+++ b/static/manifest.json
@@ -15,6 +15,6 @@
   ],
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#000000",
+  "background_color": "#ff6600",
   "theme_color": "#4DBA87"
 }
