--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "bootstrap": "^4.4.0",
     "bootstrap-vue": "^2.1.0",
+    "chart.js": "^2.9.3",
     "firebase": "^7.6.1",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "^3.0.1",
     "vuefire": "^2.2.0",
     "vuejs-datepicker": "^1.6.2"
