--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^7.6.1",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
+    "nodemailer": "^6.4.2",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
     "vue-router": "^3.0.1",
