--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "bootstrap": "^4.4.0",
-    "bootstrap-vue": "^2.1.0",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.14.0",
     "chart.js": "^2.9.3",
     "firebase": "^7.6.1",
     "material-design-icons-iconfont": "^5.0.1",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.1",
     "nodemailer": "^6.4.2",
+    "sass-loader": "^7.3.1",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.5.0",
     "vue-router": "^3.0.1",
@@ -65,7 +67,6 @@
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.7.1",
     "webpack-bundle-analyzer": "^2.9.0",
